ru.job4j.lambda.RefMethod