@@ -1,11 +1,12 @@
 package ru.job4j.lambda;
 
 import java.util.List;
+import java.util.Arrays;
 import java.util.function.Consumer;
 
 public class RefMethod {
     public static void main(String[] args) {
-        List<String> names = List.of(
+        List<String> names = Arrays.asList(
                 "Ivan",
                 "Petr Arsentev"
         );
